k8s/config/500-grafana-indicator-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-indicator-controller
  namespace: monitoring-indicator-protocol
  labels:
    app: grafana-indicator-controller
spec:
  selector:
    matchLabels:
      app: grafana-indicator-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana-indicator-controller
    spec:
      serviceAccountName: grafana-indicator-controller
      containers:
      - name: grafana-indicator-controller
        image: indicatorprotocol/grafana-indicator-controller:latest
        imagePullPolicy: Always
