k8s/config/500-indicator-admission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indicator-admission
  namespace: monitoring-indicator-protocol
  labels:
    app: indicator-admission
spec:
  selector:
    matchLabels:
      app: indicator-admission
  replicas: 3
  template:
    metadata:
      labels:
        app: indicator-admission
    spec:
      serviceAccountName: indicator-admission
      containers:
      - name: patch-ca
        image: oratos/cert-generator:latest
        command:
        - /bin/bash
        - -c
        - |
          set -e

          while true; do
            ca_cert=$(kubectl get secrets "$CA_SECRET" -o json | jq '.data."tls.crt"' --raw-output)
            kubectl patch \
              mutatingwebhookconfiguration "$WEBHOOK_CONFIG" \
              --type=json \
              -p "[
                    {\"op\": \"add\", \"path\": \"/webhooks/0/clientConfig/caBundle\", \"value\": \"$ca_cert\"},
                    {\"op\": \"add\", \"path\": \"/webhooks/1/clientConfig/caBundle\", \"value\": \"$ca_cert\"},
                  ]" | grep -v "no change" | true
            kubectl patch \
              validatingwebhookconfiguration "$WEBHOOK_CONFIG" \
              --type=json \
              -p "[
                    {\"op\": \"add\", \"path\": \"/webhooks/0/clientConfig/caBundle\", \"value\": \"$ca_cert\"},
                    {\"op\": \"add\", \"path\": \"/webhooks/1/clientConfig/caBundle\", \"value\": \"$ca_cert\"},
                  ]" | grep -v "no change" | true
            sleep 10
          done
      - name: indicator-admission
        image: indicatorprotocol/k8s-indicator-admission:latest
        ports:
        - name: webhook-port
          containerPort: 9000
        readinessProbe:
          httpGet:
            scheme: HTTPS
            port: webhook-port
            path: /metrics
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/indicator-admission-certs/
          name: indicator-admission-certs
          readOnly: true
      volumes:
      - name: indicator-admission-certs
        secret:
          secretName: indicator-admission
