k8s/config/500-prometheus-indicator-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-indicator-controller
  namespace: monitoring-indicator-protocol
  labels:
    app: prometheus-indicator-controller
spec:
  selector:
    matchLabels:
      app: prometheus-indicator-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-indicator-controller
    spec:
      serviceAccountName: prometheus-indicator-controller
      containers:
      - name: prometheus-indicator-controller
        image: indicatorprotocol/k8s-prometheus-indicator-controller:latest
        imagePullPolicy: Always
